Link demos to swiper

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                   <span class="qualification-line"></span>
                 </div>
                 <div class="qualification-tag">
-                  <h3 class="qualification-title">Diploma in Bioengineering</h3>
+                  <h3 class="qualification-title">Diploma in Biomedical Engineering</h3>
                   <span class="qualification-subtitle">
                     Singapore Polytechnic, Singapore</span
                   >
@@ -390,7 +390,7 @@
                   A sign-up form that utilizes JavaScript for validation.
                 </p>
                 <a
-                  href="#"
+                  href="https://memewei.github.io/sign-up-form"
                   class="button button-flex small-button portfolio-button"
                   >Live Demo
                   <i class="uil uil-arrow-right button-icon"></i>
@@ -406,7 +406,7 @@
                   unlimited amount of moves.
                 </p>
                 <a
-                  href="#"
+                  href="https://memewei.github.io/knight-travails"
                   class="button button-flex small-button portfolio-button"
                   >Live Demo
                   <i class="uil uil-arrow-right button-icon"></i>
@@ -421,7 +421,7 @@
                   A simple game where user plays against the computer.
                 </p>
                 <a
-                  href="#"
+                  href="https://memewei.github.io/rock-paper-scissors"
                   class="button button-flex small-button portfolio-button"
                   >Live Demo
                   <i class="uil uil-arrow-right button-icon"></i>
@@ -444,10 +444,10 @@
         <div class="contact-container container grid">
           <div>
             <div class="contact-info">
-              <i class="uil uil-phone contact-icon"></i>
+              <i class="uil uil-instagram"></i>
               <div>
-                <h3 class="contact-title">Call Me</h3>
-                <span class="contact-subtitle">+65 9159 9368</span>
+                <h3 class="contact-title">DM Me</h3>
+                <span class="contact-subtitle">@memeweiiii</span>
               </div>
             </div>
             <div class="contact-info">
@@ -509,7 +509,7 @@
           </div>
           <ul class="footer-links">
             <li>
-              <a href="#services" class="footer-link">Services</a>
+              <a href="#about" class="footer-link">About</a>
             </li>
             <li>
               <a href="#portfolio" class="footer-link">Portfolio</a>
@@ -519,13 +519,13 @@
             </li>
           </ul>
           <div class="footer-socials">
-            <a href="" target="_blank" class="footer-social">
+            <a href="https://www.instagram.com/memeweiiii/" target="_blank" class="footer-social">
               <i class="uil uil-instagram"></i>
             </a>
-            <a href="" target="_blank" class="footer-social">
-              <i class="uil uil-twitter-alt"></i>
+            <a href="https://t.me/memewei" target="_blank" class="footer-social">
+              <i class="uil uil-telegram"></i>
             </a>
-            <a href="" target="_blank" class="footer-social">
+            <a href="https://www.linkedin.com/in/minweichin/" target="_blank" class="footer-social">
               <i class="uil uil-linkedin-alt"></i>
             </a>
           </div>
