Fix styling on contact

--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
         <div class="contact-container container grid">
           <div>
             <div class="contact-info">
-              <i class="uil uil-instagram"></i>
+              <i class="uil uil-instagram contact-icon"></i>
               <div>
                 <h3 class="contact-title">DM Me</h3>
                 <span class="contact-subtitle">@memeweiiii</span>
