--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
               </div>
             </div>
           </div>
-          <form action="" class="contact-form grid">
+          <form action="mailto:smemewei@gmail.com" class="contact-form grid">
             <div class="contact-inputs grid">
               <div class="contact-content">
                 <label for="" class="contact-label">Name</label>
