Change submit button class

--- a/index.html
+++ b/index.html
@@ -490,10 +490,7 @@
                 ></textarea>
               </div>
               <div>
-                <a href="" class="button button-flex">
-                  Send
-                  <i class="uil uil-message button-icon"></i>
-                </a>
+                <input type="submit" value="submit" class="button button-flex">
               </div>
             </div>
           </form>
