--- a/index.html
+++ b/index.html
@@ -490,7 +490,10 @@
                 ></textarea>
               </div>
               <div>
-                <input type="submit" value="submit" class="button button-flex">
+                <a href="" class="button button-flex" id="send-button">
+                  Send
+                  <i class="uil uil-message button-icon"></i>
+                </a>
               </div>
             </div>
           </form>
