--- a/index.html
+++ b/index.html
@@ -465,24 +465,24 @@
               </div>
             </div>
           </div>
-          <form action="mailto:smemewei@gmail.com" method="post" enctype="multipart/form-data" class="contact-form grid">
+          <form action="./form-handling.php" method="post" enctype="multipart/form-data" class="contact-form grid">
             <div class="contact-inputs grid">
               <div class="contact-content">
                 <label for="" class="contact-label">Name</label>
-                <input type="text" class="contact-input" />
+                <input type="text" class="contact-input" name="name"/>
               </div>
               <div class="contact-content">
                 <label for="" class="contact-label">Email</label>
-                <input type="email" class="contact-input" />
+                <input type="email" class="contact-input" name="email"/>
               </div>
               <div class="contact-content">
                 <label for="" class="contact-label">Project</label>
-                <input type="text" class="contact-input" />
+                <input type="text" class="contact-input" name="project"/>
               </div>
               <div class="contact-content">
                 <label for="" class="contact-label">Message</label>
                 <textarea
-                  name=""
+                  name="message"
                   id=""
                   cols="0"
                   rows="7"
