--- a/index.html
+++ b/index.html
@@ -476,8 +476,8 @@
                 <input type="email" class="contact-input" name="email"/>
               </div>
               <div class="contact-content">
-                <label for="" class="contact-label">Project</label>
-                <input type="text" class="contact-input" name="project"/>
+                <label for="" class="contact-label">Subject</label>
+                <input type="text" class="contact-input" name="subject"/>
               </div>
               <div class="contact-content">
                 <label for="" class="contact-label">Message</label>
