--- a/index.html
+++ b/index.html
@@ -468,19 +468,19 @@
           <form action="./form-handling.php" method="post" enctype="multipart/form-data" class="contact-form grid">
             <div class="contact-inputs grid">
               <div class="contact-content">
-                <label for="" class="contact-label">Name</label>
+                <label for="name" class="contact-label">Name</label>
                 <input type="text" class="contact-input" name="name"/>
               </div>
               <div class="contact-content">
-                <label for="" class="contact-label">Email</label>
+                <label for="mail" class="contact-label">Email</label>
                 <input type="email" class="contact-input" name="email"/>
               </div>
               <div class="contact-content">
-                <label for="" class="contact-label">Subject</label>
+                <label for="subject" class="contact-label">Subject</label>
                 <input type="text" class="contact-input" name="subject"/>
               </div>
               <div class="contact-content">
-                <label for="" class="contact-label">Message</label>
+                <label for="text" class="contact-label">Message</label>
                 <textarea
                   name="message"
                   id=""
