Remove form enctype

--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
               </div>
             </div>
           </div>
-          <form action="./form-handling.php" method="post" enctype="multipart/form-data" class="contact-form grid">
+          <form action="./form-handling.php" method="post" class="contact-form grid">
             <div class="contact-inputs grid">
               <div class="contact-content">
                 <label for="name" class="contact-label">Name</label>
