Add target for portfolio links

--- a/index.html
+++ b/index.html
@@ -392,6 +392,7 @@
                 <a
                   href="https://memewei.github.io/sign-up-form"
                   class="button button-flex small-button portfolio-button"
+                  target="_blank"
                   >Live Demo
                   <i class="uil uil-arrow-right button-icon"></i>
                 </a>
@@ -408,6 +409,7 @@
                 <a
                   href="https://memewei.github.io/knight-travails"
                   class="button button-flex small-button portfolio-button"
+                  target="_blank"
                   >Live Demo
                   <i class="uil uil-arrow-right button-icon"></i>
                 </a>
@@ -423,6 +425,7 @@
                 <a
                   href="https://memewei.github.io/rock-paper-scissors"
                   class="button button-flex small-button portfolio-button"
+                  target="_blank"
                   >Live Demo
                   <i class="uil uil-arrow-right button-icon"></i>
                 </a>
